# jclib

./: .gitignore  CMakeLists.txt
include/jclib/: jclib.h  string.h
include/jclib/algorithm/: array.h  list.h  rbtree.h
include/jclib/math/: math.h  vec.h  vec.inc.h
include/jclib/net/: net.h
include/jclib/test/: test.h
src/: CMakeLists.txt  string.c
src/math/: CMakeLists.txt  vec.c
src/net/: CMakeLists.txt  net.c
src/test/: test.c
tests/: CMakeLists.txt  string.c
tests/algorithm/: CMakeLists.txt  array.c  list.c  rbtree.c
tests/math/: CMakeLists.txt  vec.c
